<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_item_title"
        android:inputType="textCapSentences|textAutoComplete"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_content"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine|textCapSentences" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/completed"
            android:layout_width="123dp"
            android:layout_height="match_parent"
            android:text="@string/completed_text" />

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/date_input" />

        <TextView
            android:id="@+id/dueTime"
            android:layout_width="114dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/time_input" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>